--- a/src/app/dashboard/navbar/navbar.component.html
+++ b/src/app/dashboard/navbar/navbar.component.html
@@ -15,6 +15,7 @@
     <mat-menu #menu="matMenu">
       <mat-list>
         <h3 mat-subheader>Notifications</h3>
+        <span>Mark as read</span>
         <mat-list-item>
           <h6 mat-line>Statistics</h6>
         </mat-list-item>
