--- a/src/app/login/login-form/login-form.component.html
+++ b/src/app/login/login-form/login-form.component.html
@@ -4,21 +4,26 @@
 	<mat-form-field class="login-form__field" appearance="legacy">
 		<mat-label>Your email</mat-label>
 		<mat-icon matPrefix>mail</mat-icon>
-    <input matInput placeholder="">
+    <input matInput [(ngModel)]="email">
 		<!-- <mat-hint>Hint</mat-hint> -->
 	</mat-form-field>
 	<mat-form-field class="login-form__field">
     <mat-label>Your password</mat-label>
     <mat-icon matPrefix>vpn_key</mat-icon>
-		<input matInput [type]=" hide ? 'password' : 'text'">
+		<input matInput [type]=" hide ? 'password' : 'text'"
+      [(ngModel)]="password"
+    >
 		<mat-icon matSuffix (click)="hide = !hide">{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
   </mat-form-field>
-  <mat-checkbox color="primary" class="login-form__remember-pass">Remember me</mat-checkbox>
+  <mat-checkbox color="primary" class="login-form__remember-pass"
+    (change)="onChangeCheckbox()"
+  >Remember me</mat-checkbox>
   <br/>
   <button mat-flat-button color="primary"
     class="login-form__btn"
-    routerLink="/"
+    (click)="onLogin()"
   >
+  <!-- routerLink="/dashboard" -->
     Log in
   </button>
 </div>
