do basic in route requests

--- a/src/app/dashboard/announcement/announcement-add/announcement-add.component.html
+++ b/src/app/dashboard/announcement/announcement-add/announcement-add.component.html
@@ -1,20 +1,54 @@
-<mat-accordion>
-  <mat-expansion-panel>
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        Personal data
-      </mat-panel-title>
-      <mat-panel-description>
-        Type your name and age
-      </mat-panel-description>
-    </mat-expansion-panel-header>
-
-    <mat-form-field>
-      <input matInput placeholder="First name">
-    </mat-form-field>
-
-    <mat-form-field>
-      <input matInput placeholder="Age">
-    </mat-form-field>
-  </mat-expansion-panel>
-</mat-accordion>
+<mat-card>
+  <h3>Create Announcement</h3>
+  <button mat-btn (click)="onSubmit()">Submit</button>
+  <hr/>
+  <mat-card-content>
+    <mat-card class="announcement-editor">
+      <mat-form-field class="w-100">
+        <input matInput placeholder="Title" [(ngModel)]="title">
+      </mat-form-field>
+      <ejs-richtexteditor
+        [(value)]="contentHTML"
+        [toolbarSettings]="tools"
+        [quickToolbarSettings]="quickTools"
+      ></ejs-richtexteditor>
+    </mat-card>
+    <mat-tab-group mat-stretch-tabs class="announcement-options">
+      <mat-tab label="Divisions">
+        <mat-checkbox>All</mat-checkbox>
+        <mat-checkbox *ngFor="let item of allDivisions"
+          [value]="item._id"
+          [checked]="item.hasChecked"
+        >{{ item.name }}</mat-checkbox>
+      </mat-tab>
+      <mat-tab label="Tags">
+        <mat-form-field class="example-chip-list">
+          <mat-chip-list #chipList>
+            <mat-chip
+              *ngFor="let fruit of fruits"
+              [selectable]="selectable"
+              [removable]="removable"
+              (removed)="remove(fruit)">
+              {{fruit}}
+              <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+            </mat-chip>
+            <input
+              placeholder="New fruit..."
+              #fruitInput
+              [formControl]="fruitCtrl"
+              [matAutocomplete]="auto"
+              [matChipInputFor]="chipList"
+              [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+              [matChipInputAddOnBlur]="addOnBlur"
+              (matChipInputTokenEnd)="add($event)">
+          </mat-chip-list>
+          <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
+            <mat-option *ngFor="let fruit of filteredFruits | async" [value]="fruit">
+              {{fruit}}
+            </mat-option>
+          </mat-autocomplete>
+        </mat-form-field>
+      </mat-tab>
+    </mat-tab-group>
+  </mat-card-content>
+</mat-card>
