--- a/src/app/dashboard/announcement/announcement-list/announcement-list.component.html
+++ b/src/app/dashboard/announcement/announcement-list/announcement-list.component.html
@@ -8,9 +8,6 @@
           <div mat-card-avatar class="announcement-add__avatar"
             style="background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg'); background-size: cover"
           ></div>
-          <!-- <mat-chip color="primary" selected
-            class="announcement-add__message-box"
-          ></mat-chip> -->
           <div class="announcement-add__message-box">
             <span>What's do you want announce?</span>
           </div>
@@ -46,15 +43,15 @@
               A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
               bred for hunting.
             </p>
+            <mat-card-actions>
+              <button mat-button>LIKE</button>
+              <button mat-button>SHARE</button>
+            </mat-card-actions>
           </mat-card-content>
         </div>
         <div class="announcement__img">
           <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
         </div>
-        <!-- <mat-card-actions>
-          <button mat-button>LIKE</button>
-          <button mat-button>SHARE</button>
-        </mat-card-actions> -->
       </mat-card>
     </mat-card>
   </div>
